Implement enabled functionality